played with css to stop text overlap

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ body {
 #cardChart th, td{
   test-align: left;
   border: 1px solid antiquewhite;
-  width: 33%;
+  width: 25%;
   height: 8.3%;
 }
 #topSection{
@@ -196,7 +196,7 @@ body {
 }
 
 button {
-  width: 100px;
+  width: 50px;
   height: 50px;
   background-color: #595959;
   color: antiquewhite;
